--- a/app.json
+++ b/app.json
@@ -1,4 +1,5 @@
 {
     "app": "1.0",
-    "mod": "1.2"
+    "mod": "1.2",
+    "1_19": "https://www.dropbox.com/s/uq5kcqscawxuv8i/Server%20Modpack%20v1.2.zip?dl=1"
 }
